<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Calculator</string>
    <string name="inputScreen">Large Text</string>
    <string name="BasicClearButton">AC</string>
    <string name="BasicDeleteButton">DEL</string>
    <string name="Basic7Button">7</string>
    <string name="Basic8Button">8</string>
    <string name="Basic9Button">9</string>
    <string name="BasicDivideButton">/</string>
    <string name="Basic4Button">4</string>
    <string name="Basic5Button">5</string>
    <string name="Basic6Button">6</string>
    <string name="BasicMultiplyButton">X</string>
    <string name="Basic1Button">1</string>
    <string name="Basic2Button">2</string>
    <string name="Basic3Button">3</string>
    <string name="BasicSubtractButton">-</string>
    <string name="Basic0Button">0</string>
    <string name="BasicCommaButton">,</string>
    <string name="BasicEqualsButton">=</string>
    <string name="BasicAdditionButton">+</string>
    <string name="oct1">Octet1</string>
    <string name="oct2">Octet2</string>
    <string name="oct3">Octet3</string>
    <string name="oct4">Octet4</string>
    <string name="subSlash">/#</string>
    <string name="theGroupImage">Image of the group</string>
    <string name="headingTheGroup">First Year ICT</string>
</resources>
