<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BasicCalculatorActivity"
    android:id="@+id/basicCalculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/input"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/output"
        android:layout_marginTop="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicClearButton"
        android:id="@+id/basicButtonAc"
        android:layout_below="@+id/output"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicDeleteButton"
        android:id="@+id/basicButtonDelete"
        android:layout_alignTop="@+id/basicButtonAc"
        android:layout_toRightOf="@+id/basicButtonAc"
        android:layout_toEndOf="@+id/basicButtonAc" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic7Button"
        android:id="@+id/basicButton7"
        android:layout_below="@+id/basicButtonAc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic8Button"
        android:id="@+id/basicButton8"
        android:layout_below="@+id/basicButtonDelete"
        android:layout_alignLeft="@+id/basicButtonDelete"
        android:layout_alignStart="@+id/basicButtonDelete" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic9Button"
        android:id="@+id/basicButton9"
        android:layout_below="@+id/basicButtonDelete"
        android:layout_toRightOf="@+id/basicButtonDelete"
        android:layout_toEndOf="@+id/basicButtonDelete" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicDivideButton"
        android:id="@+id/basicButtonDivide"
        android:layout_below="@+id/basicButtonDelete"
        android:layout_toRightOf="@+id/basicButton9"
        android:layout_toEndOf="@+id/basicButton9" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic4Button"
        android:id="@+id/basicButton4"
        android:layout_below="@+id/basicButton7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic5Button"
        android:id="@+id/basicButton5"
        android:layout_below="@+id/basicButton8"
        android:layout_alignLeft="@+id/basicButton8"
        android:layout_alignStart="@+id/basicButton8" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic6Button"
        android:id="@+id/basicButton6"
        android:layout_alignTop="@+id/basicButton5"
        android:layout_toRightOf="@+id/basicButton5"
        android:layout_toEndOf="@+id/basicButton5" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicMultiplyButton"
        android:id="@+id/basicButtonMultiply"
        android:layout_alignTop="@+id/basicButton6"
        android:layout_toRightOf="@+id/basicButton6"
        android:layout_toEndOf="@+id/basicButton6" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic1Button"
        android:id="@+id/basicButton1"
        android:layout_below="@+id/basicButton4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic2Button"
        android:id="@+id/basicButton2"
        android:layout_below="@+id/basicButton5"
        android:layout_alignLeft="@+id/basicButton5"
        android:layout_alignStart="@+id/basicButton5" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic3Button"
        android:id="@+id/basicButton3"
        android:layout_below="@+id/basicButton5"
        android:layout_toRightOf="@+id/basicButton5"
        android:layout_toEndOf="@+id/basicButton5" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicSubtractButton"
        android:id="@+id/basicButtonSubtract"
        android:layout_below="@+id/basicButton6"
        android:layout_toRightOf="@+id/basicButton6"
        android:layout_toEndOf="@+id/basicButton6" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/Basic0Button"
        android:id="@+id/basicButton0"
        android:layout_below="@+id/basicButton1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicCommaButton"
        android:id="@+id/basicButtonComma"
        android:layout_below="@+id/basicButton1"
        android:layout_toRightOf="@+id/basicButton1"
        android:layout_toEndOf="@+id/basicButton1" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicEqualsButton"
        android:id="@+id/basicButtonEquals"
        android:layout_alignTop="@+id/basicButtonComma"
        android:layout_toRightOf="@+id/basicButtonComma"
        android:layout_toEndOf="@+id/basicButtonComma" />

    <Button
        android:layout_width="80dp"
        android:layout_height="70dp"
        android:text="@string/BasicAdditionButton"
        android:id="@+id/basicButtonAddition"
        android:layout_below="@+id/basicButton3"
        android:layout_toRightOf="@+id/basicButton3"
        android:layout_toEndOf="@+id/basicButton3" />
</RelativeLayout>
