<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".NetworkMain">

    <EditText
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:hint="@string/oct1"
        android:id="@+id/octetOne"
        android:textSize="19dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:hint="@string/oct2"
        android:id="@+id/octetTwo"
        android:layout_alignTop="@+id/octetOne"
        android:layout_toRightOf="@+id/octetOne"
        android:layout_toEndOf="@+id/octetOne"
        android:textSize="19dp" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:hint="@string/oct3"
        android:id="@+id/octetThree"
        android:layout_alignTop="@+id/octetTwo"
        android:layout_toRightOf="@+id/octetTwo"
        android:layout_toEndOf="@+id/octetTwo"
        android:textSize="19dp" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:hint="@string/oct4"
        android:id="@+id/octetFour"
        android:layout_alignTop="@+id/octetThree"
        android:layout_toRightOf="@+id/octetThree"
        android:layout_toEndOf="@+id/octetThree"
        android:textSize="19dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Internet Protocol Information"
        android:id="@+id/calc"
        android:layout_below="@+id/octetOne"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Subnet Address"
        android:id="@+id/outputFirstUsable"
        android:textSize="20dp"
        android:layout_alignTop="@+id/outputLastUsable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Broadcast Address"
        android:id="@+id/outputLastUsable"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/subnetMask"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Default Subnet Mask"
        android:textSize="20dp"
        android:id="@+id/subnetMask"
        android:layout_below="@+id/networkClass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Network Class"
        android:textSize="20dp"
        android:id="@+id/networkClass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/subSlash"
        android:id="@+id/slashSubnet"
        android:layout_alignTop="@+id/octetFour"
        android:layout_toRightOf="@+id/octetFour"
        android:layout_toEndOf="@+id/octetFour"
        android:textSize="19dp"
        android:layout_above="@+id/calc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:id="@+id/clearButton"
        android:layout_below="@+id/calc"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Full range of IPs"
        android:id="@+id/sendNetworkSecond"
        android:onClick="sendNetworkSecond"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
